# autoware_ai_perception

./: .gitlab-ci.yml  CONTRIBUTING.md  README.md  SUPPORT.md  build_depends.repos
autoware_connector/: CMakeLists.txt  interface.yaml  package.xml
autoware_connector/include/: can_vehicle_info.h
autoware_connector/launch/: can_status_translator.launch  localization_connect.launch
autoware_connector/nodes/can_odometry/: can_odometry_core.cpp  can_odometry_core.h  can_odometry_node.cpp
autoware_connector/nodes/can_status_translator/: can_status_translator_core.cpp  can_status_translator_core.h  can_status_translator_node.cpp
ekf_localizer/: CMakeLists.txt  package.xml
ekf_localizer/include/ekf_localizer/: ekf_localizer.h
ekf_localizer/launch/: ekf_localizer.launch
ekf_localizer/src/: ekf_localizer.cpp  ekf_localizer_node.cpp
ekf_localizer/test/src/: test_ekf_localizer.cpp
gnss_localizer/: CMakeLists.txt  package.xml
gnss_localizer/launch/: nmea2tfpose.launch
gnss_localizer/nodes/fix2tfpose/: fix2tfpose.cpp
gnss_localizer/nodes/nmea2tfpose/: nmea2tfpose_core.cpp  nmea2tfpose_core.h
gnss_localizer/test/: nmea_test.cpp  nmea_test.test
image_processor/: CMakeLists.txt  package.xml
image_processor/nodes/image_rectifier/: image_rectifier_node.cpp
image_processor/nodes/image_rotator/: image_rotator_node.cpp
imm_ukf_pda_track/: CMakeLists.txt  package.xml
imm_ukf_pda_track/include/imm_ukf_pda/: imm_ukf_pda.h
imm_ukf_pda_track/include/imm_ukf_pda_lanelet2/: imm_ukf_pda_lanelet2.h
imm_ukf_pda_track/launch/: imm_ukf_pda_track.launch  imm_ukf_pda_track_lanelet2.launch  imm_ukf_pda_track_option.launch
imm_ukf_pda_track/nodes/imm_ukf_pda/: imm_ukf_pda.cpp  imm_ukf_pda_main.cpp  ukf.cpp
imm_ukf_pda_track/nodes/imm_ukf_pda_lanelet2/: imm_ukf_pda_lanelet2.cpp  imm_ukf_pda_main_lanelet2.cpp
lidar_apollo_cnn_seg_detect/: CMakeLists.txt  README.md  package.xml
lidar_apollo_cnn_seg_detect/include/: cnn_segmentation.h  feature_generator.h
lidar_apollo_cnn_seg_detect/launch/: lidar_apollo_cnn_seg_detect.launch
lidar_apollo_cnn_seg_detect/nodes/: cnn_segmentation.cpp  feature_generator.cpp  lidar_apollo_cnn_seg_detect_node.cpp
lidar_euclidean_cluster_detect/: CMakeLists.txt  README.md  package.xml
lidar_euclidean_cluster_detect/config/: params.yaml
lidar_euclidean_cluster_detect/include/: cluster.h
lidar_euclidean_cluster_detect/launch/: euclidean_clustering_Exp.launch  lidar_euclidean_cluster_detect.launch  lidar_euclidean_cluster_detect_param.launch
lidar_euclidean_cluster_detect/nodes/lidar_euclidean_cluster_detect/: cluster.cpp  gpu_euclidean_clustering.cu  lidar_euclidean_cluster_detect.cpp
lidar_fake_perception/: CMakeLists.txt  package.xml
lidar_fake_perception/include/: lidar_fake_perception.h
lidar_fake_perception/nodes/: lidar_fake_perception.cpp
lidar_imm_ukf_pda_track/: CMakeLists.txt  README.md  package.xml
lidar_imm_ukf_pda_track/include/imm_ukf_pda/: ukf.h
lidar_imm_ukf_pda_track/launch/: imm_ukf_pda_track.launch  imm_ukf_pda_track_lanelet2.launch  imm_ukf_pda_track_option.launch
lidar_imm_ukf_pda_track/nodes/imm_ukf_pda/: imm_ukf_pda.cpp
lidar_imm_ukf_pda_track/nodes/imm_ukf_pda_lanelet2/: imm_ukf_pda_lanelet2.cpp  imm_ukf_pda_main_lanelet2.cpp
lidar_kf_contour_track/: CMakeLists.txt  package.xml
lidar_kf_contour_track/include/: PolygonGenerator.h  SimpleTracker.h  lidar_kf_contour_track_core.h
lidar_kf_contour_track/launch/: lidar_kf_contour_track.launch
lidar_kf_contour_track/nodes/lidar_kf_contour_track/: PolygonGenerator.cpp  SimpleTracker.cpp  lidar_kf_contour_track_core.cpp
lidar_localizer/: CMakeLists.txt  package.xml
lidar_localizer/launch/: icp_matching.launch  ndt_matching.launch
lidar_localizer/nodes/approximate_ndt_mapping/: approximate_ndt_mapping.cpp
lidar_localizer/nodes/icp_matching/: icp_matching.cpp
lidar_localizer/nodes/ndt_mapping/: ndt_mapping.cpp
lidar_localizer/nodes/ndt_mapping_tku/: mapping.cpp  ndt_mapping_tku.cpp
lidar_localizer/nodes/ndt_matching/: ndt_matching.cpp
lidar_localizer/nodes/ndt_matching_monitor/: ndt_matching_monitor.h  ndt_matching_monitor_node.cpp
lidar_localizer/nodes/ndt_matching_tku/: ndt_matching_tku.cpp
lidar_localizer/nodes/queue_counter/: queue_counter.cpp
lidar_localizer/test/: test_launch_ndt_matching.test
lidar_localizer/test/src/: test_launch_ndt_matching.cpp
lidar_naive_l_shape_detect/: CMakeLists.txt  package.xml
lidar_naive_l_shape_detect/nodes/lidar_naive_l_shape_detect/: lidar_naive_l_shape_detect.cpp
lidar_point_pillars/: CMakeLists.txt  README.md  package.xml
lidar_point_pillars/include/lidar_point_pillars/: point_pillars.h
lidar_point_pillars/include/point_pillars_pfe/: pfe_tvm_pipeline.h
lidar_point_pillars/include/point_pillars_rpn/: rpn_tvm_pipeline.h
lidar_point_pillars/nodes/: pfe_tvm_pipeline.cpp  point_pillars.cpp  point_pillars_ros.cpp  rpn_tvm_pipeline.cpp
lidar_point_pillars/test/src/: test_point_pillars.cpp
lidar_point_pillars/tvm_models/tvm_point_pillars_pfe/: README.md
lidar_shape_estimation/: CMakeLists.txt  package.xml
lidar_shape_estimation/src/: shape_estimator.cpp
naive_motion_predict/: CMakeLists.txt  README.md  package.xml
naive_motion_predict/launch/: naive_motion_predict.launch
ndt_gpu/: CMakeLists.txt  package.xml
ndt_tku/: CMakeLists.txt  package.xml
ndt_tku/src/: algebra.cpp  newton.cpp
obj_db/: CMakeLists.txt  package.xml
obj_db/include/: obj_db.h
pcl_omp_registration/: CMakeLists.txt  package.xml
pixel_cloud_fusion/: CMakeLists.txt  package.xml
pixel_cloud_fusion/src/: pixel_cloud_fusion.cpp  pixel_cloud_fusion_node.cpp
points_downsampler/: CMakeLists.txt  package.xml
points_downsampler/launch/: points_downsample.launch
points_preprocessor/: CMakeLists.txt  package.xml
points_preprocessor/launch/: compare_map_filter.launch  ray_ground_filter.launch  space_filter.launch
points_preprocessor/test/: test_points_preprocessor.test
pos_db/: CMakeLists.txt  package.xml
pos_db/include/: pos_db.h
range_vision_fusion/: CMakeLists.txt  package.xml
(+154 files in other folders)
