<?xml version="1.0"?>
<package format="2">
  <name>autoware_connector</name>
  <version>1.12.0</version>
  <description>The autoware_connector package</description>
  <maintainer email="h_ohta@ertl.jp">h_ohta</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_can_msgs</depend>
  <depend>autoware_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
</package>
