<?xml version="1.0"?>
<package format="2">
  <name>ekf_localizer</name>
  <version>1.12.0</version>
  <description>The ekf_localizer package</description>
  <maintainer email="takamasa.horibe@tier4.jp">horibe</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>amathutils_lib</depend>
  <depend>autoware_build_flags</depend>
  <depend>autoware_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
</package>
