<?xml version="1.0"?>
<package format="2">
  <name>image_processor</name>
  <version>1.12.0</version>
  <description>The image_processor package</description>
  <maintainer email="abrahammonrroy@yahoo.com">amc-nu</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
</package>
