<?xml version="1.0"?>
<package format="2">
  <name>imm_ukf_pda_track</name>
  <version>1.12.0</version>
  <description>imm_ukf_pda_track package</description>
  <maintainer email="cirpue49@yahoo.co.jp">Kosuke Murakami</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_msgs</depend>
  <depend>amathutils_lib</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>tf</depend>
  <depend>vector_map</depend>
  <depend>lanelet2_extension</depend>
</package>
