<?xml version="1.0"?>
<package format="2">
  <name>lidar_kf_contour_track</name>
  <version>1.12.0</version>
  <description>lidar_kf_contour_track package</description>
  <maintainer email="abrahammonrroy@yahoo.com">amc</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>jsk_recognition_msgs</depend>
  <depend>op_planner</depend>
  <depend>op_ros_helpers</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>pcl_conversions</depend>
</package>
