<?xml version="1.0"?>
<package format="2">
  <name>lidar_localizer</name>
  <version>1.12.0</version>
  <description>The lidar_localizer package</description>
  <maintainer email="yuki@ertl.jp">kitsukawa</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_config_msgs</depend>
  <depend>autoware_health_checker</depend>
  <depend>autoware_msgs</depend>
  <depend>eigen</depend>
  <depend>jsk_rviz_plugins</depend>
  <depend>libpcl-all-dev</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>ndt_cpu</depend>
  <depend>ndt_gpu</depend>
  <depend>ndt_tku</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_omp_registration</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>velodyne_pointcloud</depend>

  <test_depend>rostest</test_depend>
</package>
