<?xml version="1.0"?>
<package format="2">
  <name>lidar_naive_l_shape_detect</name>
  <version>1.12.0</version>
  <description>lidar_naive_l_shape_detect package</description>
  <maintainer email="cirpue49@yahoo.co.jp">Kosuke Murakami</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
</package>
