<?xml version="1.0"?>
<package format="2">
  <name>lidar_point_pillars</name>
  <version>1.12.0</version>
  <description>lidar_point_pillars</description>
  <maintainer email="cirpue49@yahoo.co.jp">Kosuke Murakami</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
</package>
