<?xml version="1.0"?>
<package format="2">
  <name>lidar_shape_estimation</name>
  <version>1.12.0</version>
  <description>This package implements an L-Shaped PointCloud pose estimation</description>
  <maintainer email="yukihiro.saito@tier4.jp">Yukihiro Saito</maintainer>
  <license>Apache</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <exec_depend>rostest</exec_depend>
  <exec_depend>rosunit</exec_depend>
</package>
