<?xml version="1.0"?>
<package format="2">
  <name>naive_motion_predict</name>
  <version>1.12.0</version>
  <description>The naive_motion_predict package</description>
  <maintainer email="cirpue49@yahoo.co.jp">Kosuke Murakami</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_msgs</depend>
  <depend>imm_ukf_pda_track</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
</package>
