<?xml version="1.0"?>
<package format="2">
  <name>ndt_gpu</name>
  <version>1.12.0</version>
  <description>The ndt_gpu package</description>
  <maintainer email="yuki@ertl.jp">Yuki Kitsukawa</maintainer>
  <maintainer email="anh@ertl.jp">Anh Viet Nguyen</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libpcl-all-dev</build_depend>

  <exec_depend>libpcl-all</exec_depend>
</package>
