<?xml version="1.0"?>
<package format="2">
  <name>ndt_tku</name>
  <version>1.12.0</version>
  <description>The ndt_tku package</description>
  <maintainer email="yuki@ertl.jp">Yuki Kitsukawa</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>glut</depend>
  <depend>libxi-dev</depend>
  <depend>libxmu-dev</depend>
</package>
