<?xml version="1.0"?>
<package format="2">
  <name>obj_db</name>
  <version>1.12.0</version>
  <description>The obj_db package</description>
  <maintainer email="h_ohta@ertl.jp">h_ohta</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>autoware_can_msgs</depend>
  <depend>gnss</depend>
  <depend>visualization_msgs</depend>
</package>
