<?xml version="1.0"?>
<package format="2">
  <name>pcl_omp_registration</name>
  <version>1.12.0</version>
  <description>The pcl_omp_registration package</description>
  <maintainer email="yuki@ertl.jp">Yuki Kitsukawa</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
