<?xml version="1.0"?>
<package format="2">
  <name>pixel_cloud_fusion</name>
  <version>1.12.0</version>
  <description>Pixel/Point Cloud fusion node</description>
  <maintainer email="abraham.monrroy@tier4.jp">Abraham Monrroy</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>qtbase5-dev</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
</package>
