<?xml version="1.0"?>
<package format="2">
  <name>points_downsampler</name>
  <version>1.12.0</version>
  <description>The points_downsampler package</description>
  <maintainer email="yuki@ertl.jp">Yuki KITSUKAWA</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>autoware_config_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>velodyne_pointcloud</depend>

  <exec_depend>message_runtime</exec_depend>
</package>
