<?xml version="1.0"?>
<package format="2">
  <name>pos_db</name>
  <version>1.12.0</version>
  <description>The pos_db package</description>
  <maintainer email="h_ohta@ertl.jp">h_ohta</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_msgs</depend>
  <depend>gnss</depend>
  <depend>jsk_recognition_msgs</depend>
  <depend>jsk_rviz_plugins</depend>
  <depend>libssh2-dev</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
</package>
